# KNN-Graph

./: .gitignore  README.md
data/used in 2016_EFANNA/: README.md
efanna_centos/algorithm/: kdtreeub_index.hpp
efanna_centos/general/: distance.hpp  matrix.hpp
efanna_centos/samples/: efanna_index_buildall_and_evaluate  efanna_search  evaluate  inner_product.cc  test_100n_build.sh  test_treenum.sh
improve_nndescent/: CMakeLists.txt
improve_nndescent/data/siftsmall/: siftsmall_graph.i
improve_nndescent/include/efanna2e/: distance.h  index.h  index_graph.h  index_kdtree.h  neighbor.h  util.h
improve_nndescent/include/mysql/: MyDB.h
improve_nndescent/src/: index.cpp  index_graph.cpp  index_kdtree.cpp
improve_nndescent/tests/: CMakeLists.txt  Euclid_improve.cpp  inner_product.cpp  inner_product_partial.cpp  kdtree_buildall_and_evaluate.cpp  test_kdtree_graph.cpp
related works/efanna1/: CMakeLists.txt  Makefile  efanna.hpp
related works/efanna1/algorithm/: base_index.hpp  kdtreeub_index.hpp
related works/efanna1/general/: distance.hpp
related works/efanna1/mysql/: MyDB.cpp  MyDB.h  MyDB.hpp
related works/efanna1/samples/: efanna_index_buildall  efanna_index_buildall.cc  efanna_index_buildgraph  efanna_index_buildgraph.cc  efanna_index_buildtrees  efanna_index_buildtrees.cc  efanna_search  efanna_search.cc  evaluate  sift.graph  test.cpp
related works/efanna_centos/: CMakeLists.txt  Makefile  dataset_knn  efanna.hpp
related works/efanna_centos/algorithm/: base_index.hpp  get_memory.hpp  kdtreeub_index.hpp
related works/efanna_centos/general/: global.hpp
related works/efanna_centos/mysql/: MyDB.hpp
related works/efanna_centos/samples/: efanna_index_buildall  efanna_index_buildall.cc  efanna_index_buildall_and_evaluate  efanna_index_buildall_and_evaluate.cc  efanna_index_buildgraph  efanna_index_buildtrees  efanna_search  sift.results  test.sh  test_100n_build_smallsift.sh  test_10n_build.sh
related works/mysql/: MyDB.cpp  MyDB.h
